# cmnd

./: .#README.rst  pyproject.toml
cmnd/: __init__.py  __main__.py  daemon.py
